# korok

./: .dockerignore  .env  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
korok/: Dockerfile  entrypoint.sh
korok/src/: app.py  config.py  ddl.sql  main.py  puller.py
korok/src/doc_parsing/: parsing_utils.py
korok/tests/doc_parsing/: test_parsing_utils.py
